# TMR

./: .gitignore  README.md  Toxic  configure_service.sh  installAndBuildOpencvPython.bash  installOpencvPiPPython.bash  pumas_autonomous_car.service  run.txt  tree.txt  updateGit.bash  xfceOpenCvRos.bash
Hector/: consumoCorrientes.ods  diagramaElectricoRobot.fzz
catkin_ws/: .gitignore
catkin_ws/src/software/parking/: CMakeLists.txt  package.xml
catkin_ws/src/software/parking/launch/: parking.launch  test_parking.launch
catkin_ws/src/software/parking/scripts/: lane_detector_canny_hough.py  lane_tracking.py  obstacle_detection.py  parking.py
docs/: annotated.html  annotated_dup.js  classes.html  dir_026a3cf9d9c8edaca865f3f83a85fe21.html  dir_026a3cf9d9c8edaca865f3f83a85fe21.js  dir_175f992932cf93181d66a689842be629.html  dir_175f992932cf93181d66a689842be629.js  dir_3ae5769539e75d9b8c16cb32df42252b.html  dir_3ae5769539e75d9b8c16cb32df42252b.js  dir_5b5aaf32ac8d6f2e7910852b78f1ea4a.html  dir_5b5aaf32ac8d6f2e7910852b78f1ea4a.js  dir_5c0163011202d03b0c7ef94b25d9eb1e.html  dir_5c0163011202d03b0c7ef94b25d9eb1e.js  dir_64433a4e39e1dfd63314ec295139b38a.html  dir_64433a4e39e1dfd63314ec295139b38a.js  dir_684f54e2cc9eb0e984397ded07c69e59.html  dir_684f54e2cc9eb0e984397ded07c69e59.js  dir_6ba84b32e86c37cd1c0b68d525f290af.html  dir_6ba84b32e86c37cd1c0b68d525f290af.js  dir_719913a3ebc861b78864797ae8281b09.html  dir_719913a3ebc861b78864797ae8281b09.js  dir_7918493c9b626db0fcc308d28716d332.html  dir_af37e54812c0b28632b7eeb8e34c67af.html  dir_b04dbbffb976b0506536b2cd5a09d6d6.html  (+80 more)
(+1657 files in other folders)
