<?xml version="1.0"?>
<package format="2">
  <name>parking</name>
  <version>0.0.0</version>
  <description>The tmr2023 parking package</description>
  <maintainer email="thedoctor@todo.todo">thedoctor</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
